--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reef-service",
-  "version": "0.0.2",
+  "version": "1.0.0-beta.1",
   "description": "A nodejs service for the Reef arquitectural pattern",
   "main": "dist/index.js",
   "scripts": {
