--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@line64/reef-service",
-  "version": "1.0.0-beta.4",
+  "name": "reef-service",
+  "version": "1.0.0-beta.5",
   "description": "A nodejs service for the Reef arquitectural pattern",
   "main": "dist/index.js",
   "scripts": {
